2015-09-23 Fixed disabling gap after checking answers in Image Gap module
2015-09-22 Added handling reset in Page Rating module
2015-09-16 Fixed issue with checking answer in Is Equation mode in Basic Math Gaps module
2015-09-16 Fixed check mode and show answers mode connected with Math module in Table module
2015-09-15 Fixed problem with coloring empty dropdown gaps in Text module
2015-09-11 Fixed problem with disabled gaps in show answers mode in Text module
2015-09-11 Fixed problem with displaying page numbers on mLibro in Page Icon Toolbar
2015-09-11 Fixed problem with setting gap width in Table module
2015-09-09 Added changes to Sudoku, Fractions modules and added new module Fractions Binder
2015-09-09 Fixed issue with wrong range image after reset in Animated Lesson Progress
2015-09-08 Fixed issue with class on hover after reset in Image Identification module
2015-09-08 Added incrementing check counter in Show Answers module
2015-09-01 Fixed issue with earlier end of movie in Video module
2015-08-27 Fixed issue with draggable element in Text module
2015-08-25 Fixed issue with receiving state without droppedElements in Text module
2015-08-25 Added Show Answers mode in Hangman module
2015-08-25 Fixed getting maxScore by page name on page loaded event.
2015-08-24 Fixed problem with displaying initial image after reset in Animated Page Progress module
2015-08-21 Fixed problem with dragging in Slider module
2015-08-21 Fixed problem with checking answers in Basic Math Gaps and Table modules
2015-08-21 Added updating ranges on check in Animated Page Progress module
2015-08-21 Fixed sending score in event in Multiple Gap module
2015-08-20 Fixed adding classes to previous and next buttons in Navigation Bar module
2015-08-19 Added sending ValueChanged event in Limited Reset module
2015-08-19 Fixed issue with showing answers in check mode in Hangman module.
2015-08-18 Added navigating to page by number in Go To Page Button module